[tool.black]
line-length = 79
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 79
src_paths = ["src", "tests"]
float_to_top = true

[tool.mypy]
python_version = "3.9.13"
warn_return_any = true
warn_unused_configs = true

[tool.poetry]
name = "mhciipresentation"
version = "1.0"
description = ""
authors = ["Philip Hartout <philip.hartout@novartis.com>"]

# [tool.poetry.dependencies]
# python = "^3.11"
# pandas = "^1.3.3"
# mkdocs-material = "^8.5.3"
# mkdocstrings = "^0.19.0"
# mkdocstrings-python = "^0.7.1"
# biopython = "^1.79"
# scipy = "^1.9.1"
# tqdm = "^4.64.1"
# matplotlib = "^3.6.0"
# scikit-learn = "^1.1.2"
# pyprojroot = "^0.2.0"
# openpyxl = "^3.0.10"
# ipython = "^8.5.0"
# torch = "^2.0.0"
# torchvision = "^0.15.1"
# torchaudio = "^2.0.1"
# lightning = "^2.0.1"
# rich = "^13.3.3"
# hydra-core = "^1.3.2"
# torchmetrics = "^0.11.4"
# omegaconf = "^2.3.0"
# tensorboard = "^2.12.1"
# wandb = "^0.14.0"

# [tool.poetry.group.dev.dependencies]
# mypy = "^0.971"
# mkdocs = "^1.3.1"
# black = "^22.8.0"
# pre-commit = "^2.20.0"
# pyright = "^1.1.271"
# jedi = "^0.18.1"
# isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
